# RapidAlign

./: .gitignore  AGENTS.md  CMakeLists.txt  COMPREHENSIVE_GUIDE.md  LICENSE  README.md  TODO.md  autoencoder.md  batch_alignment.cu  cuda_implementation_benchmark.csv  kde.md  main.cpp  notes  plot_optimization_benchmarks.py  pointcloud_alignment.cu  projectdesc.txt  run_tests_and_benchmarks.sh  setup.py  test.py  test_batch_alignment.cu  visualize_graph_alignment.cpp  visualize_graphs.py
.github/workflows/: workflow.yml
csrc/: bindings.cpp  common.h  procrustes_kernel.cu  se3_kernel_loss.cu
deprecated/: batch_alignment.cu  test_batch_alignment.cu
docs/: README.md  SE3_KERNEL_LOSS.md  conf.py  contributing.rst  examples.rst  getting_started.rst  index.rst  installation.rst  optimizations.rst  reference.md  requirements.txt  troubleshooting.rst
docs/_static/css/: custom.css
docs/images/: logo.html
outputs/: kde_kernel_params.pt  kde_kernel_params_cuboid.pt  kde_kernel_params_multiband.pt
python/: README.md  pytorch_bindings.py  setup.py  setup_clean.py
python/example_data/: 3ug9.cif  AaClR_model_0.cif
python/examples/: pyg_example.py
python/src/: cuda_impl.cu  pybind.cpp
rapidalign/: __init__.py  algorithms.py  kde.py
ref/: 2401.12082v1.txt  2407.20223v1.txt
tests/: test_kde_cuda.py
